arvon lisäys tehty

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,5 +13,14 @@
   <form action="/reset" method="POST">
     <input type="submit" value="Nollaa">
   </form>
+
+  <form action="/set" method="POST">
+    Aseta arvo:
+    <input type="number" name="luku" min="0">
+    <br>
+    <input type="submit" value="aseta">
+    </form>
+
+    
 </body>
 </html>
