--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,7 @@
 
   <form action="/set" method="POST">
     Aseta arvo:
-    <input type="number" name="luku" min="0">
+    <input type="text" name="luku" min="0">
     <br>
     <input type="submit" value="aseta">
     </form>
